[package]
name = "sqlx_mssql"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
axum = "0.7"
serde_json = "1"
tower = "0.4"
anyhow = "1"

[dependencies.sqlx]
version = "0.6.3"
features = ["runtime-tokio-native-tls", "macros", "mssql"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.serde]
version = "1"
features = ["derive"]

